# code/files/openapi.yml
@@ -224,52 +224,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
 
-  /chat/{chat_id}/rename:
-    put:
-      summary: Переименовать чат по ID
-      security:
-        - bearerAuth: []
-      parameters:
-        - name: chat_id
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - title
-              properties:
-                title:
-                  type: string
-      responses:
-        200:
-          description: Название чата обновлено
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ChatData'
-        400:
-          description: Некорректные параметры запроса
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BadRequestError'
-        401:
-          description: Неавторизован
-        404:
-          description: Чат не найден
-        500:
-          description: Ошибка переименования чата
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/InternalServerError'
-
   /chat/{chat_id}/add-message:
     post:
       summary: Добавить сообщение в чат по ID
@@ -306,6 +260,76 @@ paths:
           description: Чат не найден
         500:
           description: Ошибка добавления сообщения в чат
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+  
+  /chat/{chat_id}/model-answer-text:
+    get:
+      summary: Получить текстовый ответ модели по контексту чата
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: chat_id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Ответ модели получен
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageData'
+        400:
+          description: Некорректные параметры запроса
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequestError'
+        401:
+          description: Неавторизован
+        404:
+          description: Чат не найден
+        500:
+          description: Ошибка получения ответа модели
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+
+  /chat/{chat_id}/model-answer-image:
+    get:
+      summary: Получить ссылку на сгенерированное изображение по контексту чата
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: chat_id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Ссылка на изображение получена
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageData'
+        400:
+          description: Некорректные параметры запроса
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequestError'
+        401:
+          description: Неавторизован
+        404:
+          description: Чат не найден
+        500:
+          description: Ошибка получения ссылки на изображение
           content:
             application/json:
               schema:
